@@ -1,6 +1,6 @@
 import logging
 
-__version__ = '1.1.1.dev2'
+__version__ = '1.2.dev1'
 
 log = logging.getLogger(__name__)
 
