@@ -13,7 +13,7 @@ if __name__ == "__main__":
       name="devpi-common",
       description="utilities jointly used by devpi-server and devpi-client",
       long_description=open("README.rst").read(),
-      version='0.1.dev1',
+      version='1.2.dev1',
       packages=find_packages(),
       install_requires=["requests>=1.2.3", "py>=1.1.17"],
       url="https://bitbucket.org/hpk42/devpi",
