@@ -1,1 +1,1 @@
-__version__ = '1.1.1.dev3'
+__version__ = '1.2.dev1'
