@@ -7,7 +7,7 @@ indexserver=
 
 [testenv]
 changedir=test_devpi_server
-commands= py.test -rfsxX --junitxml={envlogdir}/junit-{envname}.xml []
+commands= py.test --slow -rfsxX --junitxml={envlogdir}/junit-{envname}.xml []
 #install_command=pip install --pre {opts} {packages}
 deps=
     webtest
@@ -20,6 +20,17 @@ deps=
 # we want to see if things work without dependencies
 deps=  
 commands = devpi-server -h
+
+[testenv:upgrade]
+deps = virtualenv>=1.10
+changedir = 
+whitelist_externals = rm
+commands = 
+    rm -rf {envtmpdir}
+    devpi-server --serverdir {envtmpdir} --import {env:EXPORTDIR}
+    devpi-server --port 3000 --serverdir {envtmpdir} --start
+    python -c "import requests ; r = requests.get('http://localhost:3000/hpk/dev/') ; r.raise_for_status()"
+    devpi-server --port 3000 --serverdir {envtmpdir} --stop
 
 [testenv:gendeploy]
 # requires network
