@@ -16,7 +16,7 @@ if __name__ == "__main__":
       keywords="pypi cache server installer wsgi",
       long_description=README + '\n\n' + CHANGES,
       url="http://doc.devpi.net",
-      version='1.1',
+      version='1.2.dev1',
       maintainer="Holger Krekel",
       maintainer_email="holger@merlinux.eu",
       zip_safe=False,
